# pichu_loves_you

./: .pre-commit-config.yaml  Cargo.toml  README.md  config.ron  gm.toml  pichu.toml
src/: main.rs
