[package]
name = "pichu_bot"
version = "0.1.1"
edition = "2018"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
regex = "*"

# config file
ron = "0.8"
serde = { version = "1", features = ["derive"] }
